# no-judol-indobert-model

./: .gitignore  README.md  data-v1.ipynb  data-v2.ipynb  data.ipynb  modelling.ipynb  pyproject.toml  scrap-emoji-list.ipynb  youtube-comments.csv
data/: data_balanced.csv  data_cleaned.csv  data_cleaned_p1.csv  data_cleaned_p2.csv  data_concat.csv  data_komentar_dengan_prediksi - data_komentar_dengan_prediksi(2).csv  emoji_list.csv  emoji_list_clean.csv
data/from-yt/: judol_keywords.txt  judol_keywords_clean.txt  labelling.ipynb
data/from-yt/only-comment/: all_judol_ads.csv  comment-1.csv  comment-10.csv  comment-2.csv  comment-3.csv  comment-4.csv  comment-5.csv  comment-6.csv  comment-7.csv  comment-8.csv  comment-9.csv  labeled-comment-1.csv  labeled-comment-10.csv  labeled-comment-2.csv  labeled-comment-3.csv  labeled-comment-4.csv  labeled-comment-5.csv  labeled-comment-6.csv  labeled-comment-7.csv  labeled-comment-8.csv  labeled-comment-9.csv
data/from-yt/raw/: youtube-comments-10.csv  youtube-comments-2.csv  youtube-comments-3.csv  youtube-comments-4.csv  youtube-comments-5.csv  youtube-comments-6.csv  youtube-comments-7.csv  youtube-comments-8.csv  youtube-comments-9.csv  youtube-comments.csv
