[project]
name = "nojudol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "emoji>=2.15.0",
    "ipykernel>=7.2.0",
    "kaggle>=2.0.0",
    "nltk>=3.9.4",
    "pandas>=3.0.1",
    "sastrawi>=1.0.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.3.0",
    "unidecode>=1.4.0",
]
